[tool.poetry]
name = "shellshockliveaimbot"
version = "0.1.0"
description = "A simple Python script using ilyaki's formula for finding the optimal power and angle for [ShellShock Live]"
authors = ["AzideCupric <rukuy@qq.com>"]
license = "GPL-3.0-only"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pynput = "^1.7.6"

[tool.poetry.dev-dependencies]
opencv-python = "^4.6.0"
numpy = "^1.23.4"
matplotlib = "^3.6.2"
pyscreenshot = "^3.0"
scikit-learn = "^1.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
